--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "lint": "eslint src -e .ts"
+    "lint": "eslint src -e .ts",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex"
   },
   "keywords": [],
   "author": "",
